platform/gitops/components/dns/powerdns/base/powerdns-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: powerdns
  namespace: dns-system
  labels:
    app: powerdns
    component: authoritative
spec:
  replicas: 2
  selector:
    matchLabels:
      app: powerdns
      component: authoritative
  template:
    metadata:
      labels:
        app: powerdns
        component: authoritative
      annotations:
        sidecar.istio.io/inject: "false"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: powerdns
                    component: authoritative
                topologyKey: kubernetes.io/hostname
      containers:
        - name: pdns-auth
          image: powerdns/pdns-auth-46:4.6.4
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          args:
            - "--config-dir=/etc/powerdns"
            - "--daemon=no"
            - "--guardian=no"
            - "--disable-syslog"
            - "--loglevel=4"
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: api
              containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /etc/powerdns
            - name: postgres-ca
              mountPath: /etc/postgres/ca
              readOnly: true
      volumes:
        - name: config
          emptyDir: {}
        - name: config-template
          configMap:
            name: powerdns-config
        - name: postgres-ca
          secret:
            secretName: postgres-ca
            defaultMode: 0444
---
apiVersion: v1
kind: Service
metadata:
  name: powerdns
  namespace: dns-system
spec:
  type: LoadBalancer
  selector:
    app: powerdns
    component: authoritative
  ports:
    - name: dns-tcp
      port: 53
      protocol: TCP
      targetPort: dns-tcp
    - name: dns-udp
      port: 53
      protocol: UDP
      targetPort: dns-udp
    - name: api
      port: 8081
      protocol: TCP
      targetPort: api
