platform/gitops/components/dns/powerdns/base/destinationrule-powerdns-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: powerdns-api-no-mtls
  namespace: dns-system
spec:
  host: powerdns.dns-system.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8081
        tls:
          mode: DISABLE
